# gcp-support-triage-agent

./: .env.example  .gitignore  Makefile  README.md  environment.yml  eval_results.md  pyproject.toml  report.md  requirements-lock.txt  requirements.txt
docs/: ARCHITECTURE.md  REPORT.md  ROADMAP.md
docs/adr/: 0001-dataset-choice.md  0002-nl-api-vs-llm-extraction.md  0003-graph-vs-vector-retrieval.md  0004-cost-and-model-selection.md  0005-adk-orchestration.md  README.md  report.md
notebooks/: 01_eda.ipynb
sql/: 01_sample_corpus.sql  02_create_graph.sql  03_graph_traversals.sql
src/support_triage/: config.py  gcp.py
src/support_triage/agent/: __init__.py  agent.py  tools.py
src/support_triage/data/: eda.py  ingest.py  preprocess.py
src/support_triage/eval/: reference_labels.jsonl  run.py
src/support_triage/extraction/: baseline_spacy.py  gemini_extract.py  nl_api.py  run.py
src/support_triage/graph/: build.py  queries.py
src/support_triage/summarization/: gemini.py  run.py
tests/: test_smoke.py
